After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747560 - Redefinition of typedef GtkCssNode
Redefinition of typedef GtkCssNode
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other Mac OS
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-04-09 13:31 UTC by fakey
Modified: 2015-04-11 13:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Remove redefinition of typedef GtkCssNode (948 bytes, patch)
2015-04-09 13:31 UTC, fakey
committed Details | Review

Description fakey 2015-04-09 13:31:41 UTC
Created attachment 301208 [details] [review]
Remove redefinition of typedef GtkCssNode

Building on Mac OS fails because of:

  CC     a11y/libgtk_3_la-gtkexpanderaccessible.lo
In file included from ./gtkstylecontextprivate.h:23,
                 from a11y/gtkentryaccessible.c:27:
./gtkcssnodeprivate.h:34: error: redefinition of typedef 'GtkCssNode'
./gtkcsstypesprivate.h:27: error: previous declaration of 'GtkCssNode' was here